<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.squallbayu.app.shoppinglist</groupId>
	<artifactId>shoppinglist</artifactId>
	<packaging>war</packaging>
	<version>0.1-SNAPSHOT</version>
	<name>Shopping List</name>
	<properties>
		<jdk.version>1.8</jdk.version>
		<spring.version>4.1.6.RELEASE</spring.version>
		<jstl.version>1.2</jstl.version>
		<junit.version>4.12</junit.version>
		<logback.version>1.1.3</logback.version>
		<jcl-over-slf4j.version>1.7.12</jcl-over-slf4j.version>
		<jetty.version>9.3.0.M2</jetty.version>
		<tomcat7.version>2.2</tomcat7.version>
		<tomcat8.version>2.2</tomcat8.version>
		<servlet-api.version>3.1.0</servlet-api.version>
		<hibernate.version>4.3.9.Final</hibernate.version>
		<hibernate-jpa.version>1.0.0.Final</hibernate-jpa.version>
		<validation-api.version>1.1.0.Final</validation-api.version>
		<slf4j.version>1.7.12</slf4j.version>
		<jboss-logging.version>3.2.1.Final</jboss-logging.version>
		<hibernate-validator.version>5.1.3.Final</hibernate-validator.version>
		<hibernate-commons-annotations.version>4.0.5.Final</hibernate-commons-annotations.version>
		<spring-dao.version>2.0.8</spring-dao.version>
		<mysql-connector.version>5.1.35</mysql-connector.version>
		<jta.version>1.1</jta.version>
		<spring-data-jpa.version>1.8.0.RELEASE</spring-data-jpa.version>
		<dao-hibernate.version>1.2.0</dao-hibernate.version>
	</properties>
	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>${servlet-api.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>${jstl.version}</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${mysql-connector.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>${hibernate-validator.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>${hibernate.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.transaction</groupId>
			<artifactId>jta</artifactId>
			<version>${jta.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-jpa</artifactId>
			<version>${spring-data-jpa.version}</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.genericdao</groupId>
			<artifactId>dao-hibernate</artifactId>
			<version>${dao-hibernate.version}</version>
		</dependency>
	</dependencies>
	<developers>
		<developer>
			<id>squallbayu</id>
			<name>Bayu Sanjaya</name>
			<email>squallbayu@gmail.com</email>
		</developer>
	</developers>
	<build>
		<finalName>Shopping List</finalName>
		<pluginManagement>
			<plugins>
				<!-- Eclipse project -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-eclipse-plugin</artifactId>
					<version>2.9</version>
					<configuration>
						<!-- Always download and attach dependencies source code -->
						<downloadSources>true</downloadSources>
						<downloadJavadocs>false</downloadJavadocs>
						<!-- Avoid type mvn eclipse:eclipse -Dwtpversion=2.0 -->
						<wtpversion>2.0</wtpversion>
					</configuration>
				</plugin>
				<!-- Set JDK Compiler Level -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.3.2</version>
					<configuration>
						<source>${jdk.version}</source>
						<target>${jdk.version}</target>
					</configuration>
				</plugin>
				<!-- For Maven Jetty Plugin -->
				<!-- <plugin> <groupId>org.eclipse.jetty</groupId> <artifactId>jetty-maven-plugin</artifactId> 
					<version>${jetty.version}</version> </plugin> -->
				<!-- For Maven Tomcat Plugin -->
				<plugin>
					<groupId>org.apache.tomcat.maven</groupId>
					<artifactId>tomcat7-maven-plugin</artifactId>
					<version>${tomcat7.version}</version>
					<configuration>
						<path>/shoppinglist</path>
						<systemProperties>
							<JAVA_OPTS>-Xmx1024m -Xms256m -XX:MaxPermSize=256m -Xnoagent
								-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</JAVA_OPTS>
						</systemProperties>
						<contextFile>tomcat/context.xml</contextFile>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
